# kinova-ros

kinova_control/: CMakeLists.txt  package.xml
kinova_control/config/: j2s7s300_control.yaml  j2s7s300_control_modified.yaml
kinova_control/launch/: kinova_control_modified.launch  kinova_control_nofinger.launch
kinova_control/src/: ball_plugin_kinova.cpp  detect_ball.py  detect_ball_(wip_d435).py  gripper_plugin.cpp  kinova_ball_track.cpp  kinova_handler.cpp  kinova_mobile.cpp  mobile_base_ctrl.cpp
kinova_control/src/libraries/: robot.cpp  robot.h  test_code.cpp  utils.cpp  utils.h
kinova_description/urdf/: d435_sensor.xacro  j2s7s300.xacro  j2s7s300_mobile.xacro  j2s7s300_nofinger.xacro  j2s7s300_platform.xacro  kinova_common.xacro  optical_flow_sensor.xacro
kinova_gazebo/launch/: mobile_manipulator.launch  robot_launch.launch
kinova_gazebo/worlds/: jaco.world
